# ChangeLog for app-editors/emacs
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*emacs-23.2-r2 (31 Dec 2010)
*emacs-22.3-r6 (31 Dec 2010)
*emacs-21.4-r22 (31 Dec 2010)

  31 Dec 2010; Ulrich Mueller <ulm@gentoo.org> +emacs-21.4-r22.ebuild,
  +emacs-22.3-r6.ebuild, +emacs-23.2-r2.ebuild, +metadata.xml:
  Copied from portage tree.
