@@ -5,8 +5,8 @@ DIST emacs-22.3.tar.gz 39587396 RMD160 a7eed5099d0cab25f34152f1b18b5c1b4e2e0746 
 DIST emacs-23.2-patches-2.tar.bz2 2248 RMD160 e8e6d8ac11b9d9f61edca4046381f93deec24d17 SHA1 261f32cde33890d77efde5448c6aedf72377f1f1 SHA256 5a5c257847ec952d4ca8e9c1c296ae906043b9fb989c40042d25cdb27a81768c
 DIST emacs-23.2.tar.bz2 38376047 RMD160 b7441be0a32e78e02f108dcb3b09b531c6849d95 SHA1 b46e6b33e1f5e24ede0ecd0d8703b64847c83946 SHA256 ffd466fa5b06c0451612210190d2feb14b2d7ca9dd41893357d2201dd28526c5
 DIST leim-21.4.tar.gz 3291433 RMD160 89e1108bfe06425a0d6b4d941f9c297551bafcca SHA1 dd63f9aca1a58d40d9d426dd410fb627230974f7 SHA256 db24946985dd644bfed18815d6e991dad27f8ab1fd5823dd6dc4eb8dcd04333b
-EBUILD emacs-21.4-r22.ebuild 5176 RMD160 1fa570948a1de7c16e24fd97bf98062d08c76786 SHA1 f398f96f53735b83b0f7ef0333573da2b094c0a6 SHA256 f2b61e2616727544f5f4e14f45567014d24162986bd10e411aaa904ace6d65fd
-EBUILD emacs-22.3-r6.ebuild 8052 RMD160 444100251b38e4c011889290c70e1e1d0a29416c SHA1 cd5d8ab44f1a1244e6790aef831140dc42604216 SHA256 b7af827b7bae26adffb6e0df84fd12a9f60fcf0238a24f3b307b93a9d591a17d
-EBUILD emacs-23.2-r2.ebuild 10008 RMD160 47d6ab99e7483fe18a7fece0a31f1f0ad19fdfef SHA1 57367184d44c8e170f3186cf84c007a4d9be7fd3 SHA256 44fd93a28deb705d0cdbf741bb3ce65ae0c6bdc1b06d147b76abf085cd1cc4f9
-MISC ChangeLog 370 RMD160 d7056456a7b8f745b5a5b143435ad782c9aecba8 SHA1 9379293a9f23faeff296475b29ac60830f0b430b SHA256 f4b22afe44376f93751ae03a8f2cb554fe1782cec8b312ef6afd94d43fe84c35
+EBUILD emacs-21.4-r23.ebuild 5218 RMD160 9b1d051a2dec0ac5440c4ba8d4b3edf40895d0fb SHA1 46af2836fc9204a25857df847a069b4502f8da25 SHA256 e308d2d4330dfffaa86f777e9ef08dd895e7796d491e81f0f4be8bf56f37b333
+EBUILD emacs-22.3-r7.ebuild 8093 RMD160 5924d01fbd8eb58e977ce0018a9f97c9f77916e2 SHA1 acb3278c739cd5cfacefc01e6f8ed315013c6ee9 SHA256 09a734625630b1a79a8f849924cccb955f0d26ad37b86f11db6c232558d31242
+EBUILD emacs-23.2-r3.ebuild 10049 RMD160 1314f8bb3b79fd2693ccae8901ee4afb7881255a SHA1 42f6c00bbc83d582d661460d2821287b853e2017 SHA256 0872f3659dbdff4218b7db7a32b5ad75de25cba00575b466544bef1a0cd32a79
+MISC ChangeLog 708 RMD160 15d3b3ce11f85efa1b8e4e73384d2fad1006ee4c SHA1 db0591798de9ffdcddb2359074a04ddb81c09f5f SHA256 a8230d6f718c8a47d5a44def9182e1394086829ec37f7045d36576dcdd8eb6b4
 MISC metadata.xml 1745 RMD160 c60885ffe070e2e88f9a5b8def28fd20d05e5de3 SHA1 c4480fbafe47b334f878d9e87328e37c20cba56b SHA256 86f6e3328b4abfbf278876ab4ab7c546c5164713e736b14ad7cab4c68825d010
