@@ -2,7 +2,7 @@
 # Distributed under the terms of the GNU General Public License v2
 # $Header: /var/cvsroot/gentoo-x86/app-editors/emacs/emacs-22.3-r6.ebuild,v 1.12 2010/12/29 13:09:01 ulm Exp $
 
-EAPI=2
+EAPI=4
 
 inherit autotools elisp-common eutils flag-o-matic
 
@@ -13,7 +13,7 @@ SRC_URI="mirror://gnu/emacs/${P}.tar.gz
 
 LICENSE="GPL-3 FDL-1.2 BSD as-is MIT"
 SLOT="22"
-KEYWORDS="alpha amd64 arm hppa ia64 ppc ppc64 s390 sh sparc x86 ~sparc-fbsd ~x86-fbsd"
+KEYWORDS="~alpha ~amd64 ~arm ~hppa ~ia64 ~ppc ~ppc64 ~s390 ~sh ~sparc ~x86 ~sparc-fbsd ~x86-fbsd"
 IUSE="alsa gif gtk gzip-el hesiod jpeg kerberos motif png sound source tiff toolkit-scroll-bars X Xaw3d +xpm"
 RESTRICT="strip"
 
@@ -139,6 +139,9 @@ src_configure() {
 	myconf="${myconf} $(use_with hesiod)"
 	myconf="${myconf} $(use_with kerberos) $(use_with kerberos kerberos5)"
 
+	# EAPI 4 failure :(
+	einfo "Please ignore the warning about --disable-dependency-tracking"
+
 	econf \
 		--program-suffix=-${EMACS_SUFFIX} \
 		--infodir=/usr/share/info/${EMACS_SUFFIX} \
@@ -171,6 +174,7 @@ src_install () {
 	mv "${D}"/usr/share/info/${EMACS_SUFFIX}/dir{,.orig} \
 		|| die "moving info dir failed"
 	touch "${D}"/usr/share/info/${EMACS_SUFFIX}/.keepinfodir
+	docompress -x /usr/share/info/emacs-${SLOT}/dir.orig
 
 	# avoid collision between slots, see bug #169033 e.g.
 	rm "${D}"/usr/share/emacs/site-lisp/subdirs.el
@@ -210,14 +214,13 @@ src_install () {
 }
 
 pkg_preinst() {
-	# Depending on Portage version and user's settings, the Info dir file
-	# may have been compressed or removed. We rebuild it in both cases.
+	# move Info dir file to correct name
 	local infodir=/usr/share/info/${EMACS_SUFFIX} f
 	if [ -f "${D}"${infodir}/dir.orig ]; then
-		# prefer existing file if it has survived to here
 		mv "${D}"${infodir}/dir{.orig,} || die "moving info dir failed"
 	else
-		einfo "Regenerating Info directory index in ${infodir} ..."
+		# this should not happen in EAPI 4
+		ewarn "Regenerating Info directory index in ${infodir} ..."
 		rm -f "${D}"${infodir}/dir{,.*}
 		for f in "${D}"${infodir}/*; do
 			if [[ ${f##*/} != *-[0-9]* && -e ${f} ]]; then
